--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,13 @@ spring.datasource.password=773835
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
-spring.resources.add-mappings=false
+# app-mappings = true表示如果所有的controller都没有命中，则使用默认的静态资源处理器
+spring.resources.add-mappings=true
 spring.mvc.throw-exception-if-no-handler-found=true
+
+# 接入前端静态资源页面
+spring.mvc.static-path-pattern=/static/**
+
+# thymeleaf 相关配置
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
