--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ mybatis.mapper-locations=classpath:mapping/*.xml
 
 # 配置数据库链接等数据源
 spring.datasource.name=dianping
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/dianping?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/dianping?useUnicode=true&useSSL=false&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=773835
 
@@ -21,3 +21,7 @@ spring.mvc.static-path-pattern=/static/**
 # thymeleaf 相关配置
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
+
+#admin官方账号的用户名和密码
+admin.email=admin@zth.com
+admin.encryptPassword=4QrcOUm6Wau+VuBX8g+IPg==
